--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Arkadiusz Wzorek
 description: Wstęp do informatyki 2024/2025
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
